# speaker-cli

./: example.str  example2.srt  pyproject.toml
subtitle_cli/: main.py
